# advent-of-code-2021

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
aoc_proc_macros/src/: lib.rs
inputs/: 0.1..txt  0.1.test.txt  1.1.test.txt  1.2.test.txt  13.test.txt  17.test.txt  19.challenge.txt  2.1.test.txt  2.2.test.txt  3.1.test.txt  3.2.test.txt
src/: aoc_macros.rs  data.rs  inputs.rs  main.rs  utils.rs
src/days/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day22.rs  day7.rs  helpers.rs  mod.rs
