[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"
publish = false
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_macros"
path = "src/aoc_macros.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# debug = true

[dependencies]
aoc_proc_macros = { path = "./aoc_proc_macros" }

ahash = "0.7.6"
beef = "0.5.1"
hash32 = "0.2.1"
kommand = "0.6.0"
nameless = "0.6.0"
rust-embed = { version = "6.3.0", features = ["compression"] }
shadow-rs = "0.8.1"
transpose = "0.2.1"
unstd = "0.1.0"
yyid = "0.6.0"

# bitvec = "0.22.3"
# fasthash = "0.4.0"
# itertools = "0.10.1"
# ndarray = "0.15.4"
# num_enum = "0.5.4"
# once_cell = "1.8.0"
# rayon = "1.5.1"
# regex = "1.5.4"
# serde = { version = "1.0.130", features = ["derive"] }
# serde_yaml = "0.8.21"

[build-dependencies]
shadow-rs = "0.8.1"
